[gd_scene load_steps=6 format=3 uid="uid://cffu5wb8vf48s"]

[ext_resource type="Script" path="res://hud.gd" id="1_041ea"]
[ext_resource type="Theme" uid="uid://cs4fla4ppqe63" path="res://new_theme.tres" id="2_b2i0h"]
[ext_resource type="FontFile" uid="uid://dqrmqwaqtmniv" path="res://assets/Kenney Bold.ttf" id="3_lsjs4"]
[ext_resource type="LabelSettings" uid="uid://cqw7dduyvsf3o" path="res://new_label_settings.tres" id="4_qkj3f"]

[sub_resource type="FontVariation" id="FontVariation_a1gky"]
fallbacks = Array[Font]([null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])
base_font = ExtResource("3_lsjs4")
spacing_top = 17

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_041ea")

[node name="Retry" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -97.0
offset_right = 124.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_b2i0h")
theme_override_fonts/font = SubResource("FontVariation_a1gky")
theme_override_font_sizes/font_size = 48
text = "START"

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_b2i0h")
theme_override_font_sizes/font_size = 48
text = "Coin Dash!"
label_settings = ExtResource("4_qkj3f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TimeLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_b2i0h")
text = "0"
label_settings = ExtResource("4_qkj3f")
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_b2i0h")
text = "0"
label_settings = ExtResource("4_qkj3f")
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
